name:               esimmler-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , filepath == 1.4.*
                  , regex-pcre-builtin
                  , containers
  ghc-options:      -threaded -fobject-code
  default-language: Haskell2010